--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("link.profile"), current_user %></li>
-              <li><%= link_to t("link.setting"), "#" %></li>
+              <li><%= link_to t("link.setting"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("link.logout"), logout_path, method: :delete %>
