--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,10 @@
 <% provide(:title, t("link.signup")) %>
+<% provide(:button_text, t("link.signup")) %>
+
 <h1><%= t("link.signup") %></h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for @user, url: signup_path do |f| %>
-      <%= render "shared/error_messages", object: @user%>
-
-      <%= f.label :name, t("form.name") %>
-      <%= f.text_field :name, class: "form-control" %>
-
-      <%= f.label :email, t("form.email") %>
-      <%= f.email_field :email, class: "form-control" %>
-
-      <%= f.label :phone, t("form.phone") %>
-      <%= f.telephone_field :phone, class: "form-control" %>
-
-      <%= f.label :address, t("form.address") %>
-      <%= f.text_field :address, class: "form-control" %>
-
-      <%= f.label :password, t("form.pass") %>
-      <%= f.password_field :password, class: "form-control" %>
-
-      <%= f.label :password_confirmation, t("form.pass_confirm") %>
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-
-      <%= f.submit t("link.create"), class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form" %>
   </div>
 </div>
