--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -204,3 +204,65 @@ input {
     border-bottom: 1px solid $gray-lighter;
   }
 }
+
+/* User Profile */
+.page-header {
+    height: 25vh;
+    background-image: url('banner.jpg');
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+.main-raised {
+    margin: -60px 30px 30px 30px;
+    border-radius: 5px;
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+}
+
+.main {
+    background: #FFF;
+    position: relative;
+    z-index: 3;
+}
+
+.img-raised {
+    box-shadow: 0 5px 15px -8px rgba(0,0,0,.24), 0 8px 10px -5px rgba(0,0,0,.2);
+}
+
+.rounded-circle {
+    border-radius: 10%!important;
+}
+
+.profile {
+  text-align: center;
+  margin-top: -60px;
+  img {
+    margin-top: -60px;
+  }
+  .h6, h6 {
+    font-weight: 550;
+    font-family: Roboto,Helvetica,Arial,sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+  .title {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #3C4858;
+    font-weight: 700;
+    font-family: "Roboto Slab","Times New Roman",serif;
+    font-size: 35px;
+  }
+}
+
+.container-result {
+  padding-top: 20px;
+  background-color: #f6f6f6;
+  min-height: 40em;
+  border-radius: 1%!important;
+  border-style: solid;
+  border-color: gray;
+  border-width: 1px;
+}
