--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,28 @@
-<% provide(:title, @user.name) %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
-    </section>
-  </aside>
+<div class="page-header"></div>
+<div class="main main-raised">
+  <div class="profile-content1">
+      <div class="profile">
+        <div class="avatar">
+          <%= image_tag(gravatar_for(@user), alt: "Circle Image", class: "rounded-circle") %>
+        </div>
+        <div class="name">
+          <h3 class="title"><%= @user.name %></h3>
+          <h6><%= @user.email %></h6>
+        </div>
+      </div>
+      </br>
+      <div class="container-fluid">
+        <div class="col-sm-2">
+          <div class="list-group" id="list-tab" role="tablist">
+            <%= link_to "Shop Cart", "#", class: "list-group-item list-group-item-action" %>
+            <%= link_to "Orders", "#", class: "list-group-item list-group-item-action" %>
+            <%= link_to "Analytic", "#", class: "list-group-item list-group-item-action" %>
+          </div>
+        </div>
+        <div class="col-sm-10">
+          <div class="container-fluid container-result"></div>
+        </div>
+      </div>
+      </br>
+  </div>
 </div>
