--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :product do |f| %>
+<%= form_for @product do |f| %>
   <%= render "shared/error_messages", object: @product %>
 
   <div class="col-md-3">
@@ -15,7 +15,7 @@
 
     <div class="form-group">
       <%= f.label :category, "Category" %>
-      <%= f.select(:category_id, Category.all.collect{|c| [ c.name, c.id ]}, {include_blank: true}, class: "form-control") %>
+      <%= f.select(:category_id, Category.all.collect{|c| [ c.name, c.id ]}, {include_blank: "None"}, class: "form-control") %>
     </div>
 
     <div class="row">
