--- a/app/views/products/_product_item.html.erb
+++ b/app/views/products/_product_item.html.erb
@@ -8,10 +8,10 @@
   <td class="text-left"><%= product_item.get_price %></td>
   <td><%= product_item.rank %></td>
   <td class="text-right">
-    <%= link_to "#", class: "btn btn-sm btn-warning" do %>
+    <%= link_to edit_product_path(product_item), class: "btn btn-sm btn-warning" do %>
       <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
     <% end %>
-    <%= link_to "#", class: "btn btn-sm btn-danger" do %>
+    <%= link_to product_item, method: :delete, class: "btn btn-sm btn-danger" do %>
       <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
     <% end %>
   </td>
