--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,32 @@
-<div class="center jumbotron">
-  <h1><%= t("label.welcome", logo: t("link.logo")) %></h1>
-  <div class="logo">
-    <%= link_to image_tag("sunbearlogo.png", style: "width: 50%", alt: "Rails logo"), "#" %>
-  </div>
-  <%= link_to t("link.signup"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
 
+<!-- navbar -->
+
+<div class="container">
+  <div class="row it" id="cont">
+    <div class="col-md-12"><div class="col-md-12"><h2>Featured Products</h2></div></div>
+    <div class="col-md-12">
+    <div class="col-md-4 item"><a href=""><div style="background:#eee; height:300px; margin-top:30px;"></div></a></div>
+    <div class="col-md-4 item"><a href=""><div style="background:#eee; height:300px; margin-top:30px;"></div></a></div>
+    <div class="col-md-4 item"><a href=""><div style="background:#eee; height:300px; margin-top:30px;"></div></a></div>
+    <div class="col-md-4 item"><a href=""><div style="background:#eee; height:300px; margin-top:30px;"></div></a></div>
+    <div class="col-md-4 item"><a href=""><div style="background:#eee; height:300px; margin-top:30px;"></div></a></div>
+    <div class="col-md-4 item"><a href=""><div style="background:#eee; height:300px; margin-top:30px;"></div></a></div>
+    </div>
+  </div>
+
+  <div class="row it" id="cont">
+    <div class="col-md-12"><div class="col-md-12"><h2>Recent Products</h2></div></div>
+    <div class="col-md-12">
+      <div class="col-md-4 item"><div style="background:#eee; height:300px; margin-top:30px;"></div></div>
+      <div class="col-md-4 item"><div style="background:#eee; height:300px; margin-top:30px;"></div></div>
+      <div class="col-md-4 item"><div style="background:#eee; height:300px; margin-top:30px;"></div></div>
+      <div class="col-md-4 item"><div style="background:#eee; height:300px; margin-top:30px;"></div></div>
+      <div class="col-md-4 item"><div style="background:#eee; height:300px; margin-top:30px;"></div></div>
+    </div>
+  </div>
+</div>
+<!-- /container -->
+
+<div class="container">
+  <div class="col-md-12 footer">Copyright © 2000-2014 AdsLANKA. All Rights Reserved.</div>
+</div>
