--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,99 +15,6 @@ $gray-soft: #bbb;
   box-sizing: border-box;
 }
 
-/* universal */
-body {
-  padding-top: 60px;
-}
-
-section {
-  overflow: auto;
-}
-
-textarea {
-  resize: vertical;
-}
-
-.center {
-  text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
-}
-
-/* typography */
-h1, h2, h3, h4, h5, h6 {
-  line-height: 1;
-}
-
-h1 {
-  font-size: 3em;
-  letter-spacing: -2px;
-  margin-bottom: 30px;
-  text-align: center;
-}
-
-h2 {
-  font-size: 1.2em;
-  letter-spacing: -1px;
-  margin-bottom: 30px;
-  text-align: center;
-  font-weight: normal;
-  color: $gray-light;
-}
-
-p {
-  font-size: 1.1em;
-  line-height: 1.7em;
-}
-
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: $white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-}
-
-#logo:hover {
-  color: $gray-light;
-  text-decoration: none;
-}
-
-/* footer */
-footer {
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid $gray-medium-light;
-  color: $gray-light;
-}
-
-footer a {
-  color: $gray;
-}
-
-footer a:hover {
-  color: $gray-darker;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
-}
-
 /* miscellaneous */
 .debug_dump {
   clear: both;
@@ -266,3 +173,60 @@ input {
   border-color: gray;
   border-width: 1px;
 }
+
+
+/* Home Page */
+@font-face {
+  font-family: 'Roboto-Regular';
+  src: url('../fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+html {
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+body {
+  font-family:"Roboto-Regular"; font-weight:normal;
+}
+
+.it h2{ color: #666; font-family: "Roboto-Light"; padding-top: 10px; }
+a:hover { text-decoration: none;}
+
+
+.navbar-brands {
+  height:70px; margin:0 0 30px 0; padding:0;
+}
+
+.navbar-fixed-top {
+  border: 0;
+}
+
+.navbar-inverse { background:#fff;border:0; }
+.navbar-inverse ul{  }
+.navbar-inverse li { list-style:none; display:inline; }
+
+
+
+.categories {
+  font-family: "Roboto-Regular";
+}
+.categories #horizontal {
+  margin: 0;
+  border-top: 1px solid #eee;
+  padding-left: 11px;
+  border-bottom: 2px solid #eee;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+.categories li { margin-right: 30px;  }
+.categories li a{ font-size: 1em; color: #666;}
+.categories li a:hover { color:#CC2B55;}
+.categories button { margin-left: 10px;}
+.txtarea {
+  border: 1px solid #ccc; height: 60px; margin-bottom: 30px;
+}
+
+.footer { border-top: 2px solid #eee; margin-top: 30px; margin-bottom: 30px; padding-top: 15px;font-size: 0.9em; color: #999;}
