--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,11 @@
               <% end %>
             </div>
           </div>
-          <%= link_to "#", class: "btn btn-success btn-sm ml-3" do %>
+          <%= link_to cart_path, class: "btn btn-success btn-sm ml-3" do %>
             <i class="fa fa-shopping-cart"></i> <%= t("link.cart") %>
+            <span class="badge badge-light" id="cart_size">
+              <%= load_size_cart %>
+            </span>
           <% end %>
         </form>
       </nav>
@@ -24,7 +27,7 @@
           <%= link_to t("label.home"), root_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to t("link.cart"), "#", class: "nav-link" %>
+          <%= link_to t("link.cart"), cart_path, class: "nav-link" %>
         </li>
 
         <% if logged_in? %>
