--- a/app/views/shared/_product_item.html.erb
+++ b/app/views/shared/_product_item.html.erb
@@ -4,13 +4,19 @@
       <%= link_to (image_tag product_item.image), "#" %>
       <ul class="social">
         <li>
-          <%= link_to "#" do %>
-            <i class="fa fa-shopping-bag"></i>
+          <%= form_for :cart, url: shoping_path, method: :POST, remote: true do |f| %>
+            <div><%= f.hidden_field :product_id, value: product_item.id %></div>
+            <%= f.button :submit do %>
+              <i class="fa fa-shopping-bag"></i>
+            <% end %>
           <% end %>
         </li>
         <li>
-          <%= link_to "#" do %>
-            <i class="fa fa-shopping-cart"></i>
+          <%= form_for :cart, url: shoping_path, method: :POST do |f| %>
+            <div><%= f.hidden_field :product_id, value: product_item.id %></div>
+            <%= f.button :submit do %>
+              <i class="fa fa-shopping-cart"></i>
+            <% end %>
           <% end %>
         </li>
       </ul>
