--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,49 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to t("logo"), root_path, id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("link.home"), root_path %></li>
-        <li><%= link_to t("link.help"), "#" %></li>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container">
+      <%= link_to t("logo"), root_path, class: "navbar-brand" %>
+
+      <nav class="navbar navbar-expand-sm justify-content-center">
+        <form class="form-inline my-2 my-lg-0">
+          <div class="input-group input-group-sm">
+            <%= text_field_tag :search_text, "", placeholder: t("label.search"), class: "form-control" %>
+            <div class="input-group-append">
+              <%= button_tag :submit, class: "btn btn-secondary btn-number" do %>
+                <i class="fa fa-search"></i>
+              <% end %>
+            </div>
+          </div>
+          <%= link_to "#", class: "btn btn-success btn-sm ml-3" do %>
+            <i class="fa fa-shopping-cart"></i> <%= t("link.cart") %>
+          <% end %>
+        </form>
+      </nav>
+
+      <ul class="navbar-nav nav-right">
+        <li class="nav-item active">
+          <%= link_to t("label.home"), root_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to t("link.cart"), "#", class: "nav-link" %>
+        </li>
+
         <% if logged_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= t("link.account") %><b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to t("link.profile"), current_user %></li>
-              <li><%= link_to t("link.setting"), edit_user_path(current_user) %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to t("link.logout"), logout_path, method: :delete %>
-              </li>
-            </ul>
+          <li class="nav-item dropdown ">
+            <div id="navbardrop" data-toggle="dropdown">
+              <%= link_to t("link.account"), "#", class: "nav-link dropdown-toggle active" %>
+            </div>
+            <div class="dropdown-menu">
+              <%= link_to t("link.profile"), current_user, class: "dropdown-item" %>
+              <%= link_to t("link.setting"), edit_user_path(current_user), class: "dropdown-item" %>
+              <%= link_to t("link.logout"), logout_path, method: :delete, class: "dropdown-item" %>
+            </div>
           </li>
         <% else %>
-          <li><%= link_to t("link.login"), login_path %></li>
+          <li class="nav-item active">
+            <%= link_to t("link.login"), login_path, class: "nav-link" %>
+          </li>
         <% end %>
       </ul>
-    </nav>
-  </div>
+    </div>
+  </nav>
 </header>
