--- a/app/views/cart/_product_cart.html.erb
+++ b/app/views/cart/_product_cart.html.erb
@@ -4,8 +4,8 @@
   <td class="text-left"><%= product_cart.info %></td>
   <td><%= product_cart.category.name %></td>
   <td class="text-left"><%= number_to_price(product_cart.price) %></td>
-  <td class="text-center"><%= product_cart.quantity %></td>
-  <td class="text-left"><%= number_to_price(product_cart.price * product_cart.quantity) %></td>
+  <td class="text-center"><%= product_cart.amount_added %></td>
+  <td class="text-left"><%= number_to_price product_cart.get_total_price %></td>
   <td class="text-right">
     <%= form_tag cart_path, method: :DELETE do |f| %>
       <%= hidden_field_tag :product_id, product_cart.id %>
