--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -41,7 +41,7 @@
     </div>
     <% if @products.any? %>
       <div class="col-md-2 text-right">
-        <%= link_to "#", class: "btn btn-success" do %>
+        <%= link_to new_order_path, class: "btn btn-success" do %>
           <%= t("link.checkout") %> >
         <% end %>
       </div>
