--- a/app/views/shared/_product_item.html.erb
+++ b/app/views/shared/_product_item.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-3">
   <div class="product-grid3">
     <div class="product-image3">
-      <%= link_to (image_tag product_item.image), "#" %>
+      <%= link_to (image_tag product_item.image), product_item %>
       <ul class="social">
         <li>
           <%= form_for :cart, url: shoping_path, method: :POST, remote: true do |f| %>
