--- a/app/views/cart/_product_cart.html.erb
+++ b/app/views/cart/_product_cart.html.erb
@@ -1,5 +1,6 @@
 <tr>
-  <td><%= image_tag product_cart.image, size: "50x50" %></td>
+  <td><%= link_to (image_tag product_cart.image, size: Settings.cart.size_img),
+    product_cart %></td>
   <td><%= product_cart.name %></td>
   <td class="text-left"><%= product_cart.info %></td>
   <td><%= product_cart.category.name %></td>
