--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -28,3 +28,15 @@
 }
 @media only screen and (max-width:359px){.product-grid3 .rating{margin:0}
 }
+
+.table th {
+  .th-child-5 {
+    width: 5%;
+  }
+  .th-child-10 {
+    width: 10%;
+  }
+  .th-child-20 {
+    width: 20%;
+  }
+}
