add upload product

--- a/app/views/cart/_product_cart.html.erb
+++ b/app/views/cart/_product_cart.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= link_to (image_tag product_cart.image, size: Settings.cart.size_img),
+  <td><%= link_to (image_tag product_cart.image_url, size: Settings.cart.size_img),
     product_cart %></td>
   <td><%= product_cart.name %></td>
   <td class="text-left"><%= product_cart.info %></td>
