--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= counter %></td>
-  <td><%= link_to (image_tag product.image, size: Settings.cart.size_img), product %></td>
+  <td><%= link_to (image_tag product.image_url, size: Settings.cart.size_img), product %></td>
   <td><%= product.name %></td>
   <td><%= product.info %></td>
   <td><%= product.category.name %></td>
