--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,36 +1,47 @@
 <%= form_for @product do |f| %>
   <%= render "shared/error_messages", object: @product %>
-
-    <div class="form-group">
-      <%= f.label :name, t("form.name") %>
-      <%= f.text_field :name, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :info, t("label.info") %>
-      <%= f.text_area :info, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :category, t("label.category") %>
-      <div class="form-inline">
-        <%= f.select(:category_id, load_categories, {include_blank: false}, class: "form-control") %>
-        <%= link_to new_category_path, class: "form-select btn btn-info" do %>
-          <i class="fa fa-plus"></i>
-        <% end %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-      <%= f.label :quantity, t("label.quantity") %>
-      <%= f.number_field :quantity, class: "form-control" %>
-      </div>
-      <div class="col-md-6 col-md-offset-1">
-        <%= f.label :price, t("label.price") %>
-        <div class="form-inline">
-          <%= t("product.unit") %>.
-          <%= f.number_field :price, class: "form-control" %>
+  <div class="row">
+    <div class="col-md-4 offset-md-1">
+      <div class="product-grid3">
+        <div class="product-image3">
+          <%= image_tag @product.image_url, alt: @product.name %>
+          <%= f.file_field :image %>
         </div>
       </div>
     </div>
-    </br>
-    <%= f.submit yield(:button_text), class: "form-control btn-info" %>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :name, t("form.name") %>
+        <%= f.text_field :name, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :info, t("label.info") %>
+        <%= f.text_area :info, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :category, t("label.category") %>
+        <div class="form-inline">
+          <%= f.select(:category_id, load_categories, {include_blank: false}, class: "form-control") %>
+          <%= link_to new_category_path, class: "form-select btn btn-info" do %>
+            <i class="fa fa-plus"></i>
+          <% end %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+        <%= f.label :quantity, t("label.quantity") %>
+        <%= f.number_field :quantity, class: "form-control" %>
+        </div>
+        <div class="col-md-6 col-md-offset-1">
+          <%= f.label :price, t("label.price") %>
+          <div class="form-inline">
+            <%= t("product.unit") %>.
+            <%= f.number_field :price, class: "form-control" %>
+          </div>
+        </div>
+      </div>
+      </br>
+      <%= f.submit yield(:button_text), class: "form-control btn-info" %>
+    </div>
+  </div>
 <% end %>
