--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,9 @@
 <% provide(:button_text, t("link.create")) %>
 </br>
 <div class="container">
-  <div class="row justify-content-md-center">
+  <div class="row offset-md-1">
     <h1><%= t("label.product") %></h1>
   </div>
-  <div class="col-md-6 offset-md-3">
-    <%= render "form" %>
-  </div>
+  <%= render "form" %>
 </div>
 </br>
