--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-4">
       <div class="product-grid3">
         <div class="product-image3">
-          <%= image_tag @product.image, alt: @product.name %>
+          <%= image_tag @product.image_url, alt: @product.name %>
         </div>
       </div>
     </div>
