--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,3 +30,6 @@
     </div>
   </div>
 </footer>
+
+<% javascript_include_tag "vchat", "data-turbolinks-track": "reload" %>
+<% javascript_include_tag "facebook" %>
