--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
               </div>
               <div class="dropdown-menu">
                 <%= link_to t("label.product"), products_path, class: "dropdown-item" %>
-                <%= link_to t("label.receipt"), "#", class: "dropdown-item" %>
+                <%= link_to t("label.receipt"), admin_orders_path, class: "dropdown-item" %>
               </div>
             </li>
           <% end %>
