--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,6 +37,7 @@
                 <%= link_to t("link.manager"), "#", class: "nav-link dropdown-toggle active" %>
               </div>
               <div class="dropdown-menu">
+                <%= link_to t("label.user"), users_path, class: "dropdown-item" %>
                 <%= link_to t("label.product"), products_path, class: "dropdown-item" %>
                 <%= link_to t("label.receipt"), admin_orders_path, class: "dropdown-item" %>
               </div>
