--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,23 +1,38 @@
+<hr>
 <%= form_for @user do |f| %>
   <%= render "shared/error_messages", object: @user %>
 
-  <%= f.label :name, t("form.name") %>
-  <%= f.text_field :name, class: "form-control" %>
+  <% if current_user&.admin? %>
+    <div class="form-group">
+      <%= f.label :role, t("form.role") %>
+      <%= f.select(:role, load_user_roles, {include_blank: false}, class: "form-control") %>
+    </div>
+  <% end %>
+  <div class="form-group">
+    <%= f.label :name, t("form.name") %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :email, t("form.email") %>
+    <%= f.email_field :email, class: "form-control" %>
+  </div>
 
-  <%= f.label :email, t("form.email") %>
-  <%= f.email_field :email, class: "form-control" %>
-
-  <%= f.label :phone, t("form.phone") %>
-  <%= f.telephone_field :phone, class: "form-control" %>
-
-  <%= f.label :address, t("form.address") %>
-  <%= f.text_field :address, class: "form-control" %>
-
-  <%= f.label :password, t("form.pass") %>
-  <%= f.password_field :password, class: "form-control" %>
-
-  <%= f.label :password_confirmation, t("form.pass_confirm") %>
-  <%= f.password_field :password_confirmation, class: "form-control" %>
-
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  <div class="form-group">
+    <%= f.label :phone, t("form.phone") %>
+    <%= f.telephone_field :phone, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :address, t("form.address") %>
+    <%= f.text_field :address, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :password, t("form.pass") %>
+    <%= f.password_field :password, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :password_confirmation, t("form.pass_confirm") %>
+    <%= f.password_field :password_confirmation, class: "form-control" %>
+  </div>
+  <%= f.submit yield(:button_text), class: "form-control btn-primary" %>
 <% end %>
+<hr>
