--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,10 @@
 <% provide(:title, t("label.edit")) %>
 <% provide(:button_text, t("link.save")) %>
-<h1><%= t("label.edit") %></h1>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render "form" %>
+<div class = "container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h1><%= t("label.edit") %></h1>
+      <%= render "form" %>
+    </div>
   </div>
 </div>
