--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,11 @@
 <% provide(:title, t("link.signup")) %>
 <% provide(:button_text, t("link.signup")) %>
-
-<h1><%= t("link.signup") %></h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render "form" %>
+</br>
+<div class = "container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h1><%= t("link.signup") %></h1>
+      <%= render "form" %>
+    </div>
   </div>
 </div>
