--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,22 @@
     <h1><%= t("label.user") %></h1>
   </div>
   </br>
+  <%= form_for users_path, method: :GET do %>
+    <div class="container">
+      <div class="row">
+        <form class="form-inline">
+          <div class="col-md-3">
+            <label><%= t "label.sort" %> :</label>
+            <%= select_tag :sort_id, options_for_select(load_options, params[:sort_id]), {class: "form-control form-select"} %>
+          </div>
+          <div class="col-md-2">
+            <%= submit_tag t("label.search"), class: "btn btn-primary" %>
+          </div>
+        </form>
+      </div>
+      </br>
+    </div>
+  <% end %>
   <div class="row">
     <table class="table">
       <thead>
