--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,7 @@
 
   <body>
     <%= render "layouts/header" %>
-    <div class="container">
-      <% flash.each do |message_type, message| %>
-        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-      <% end %>
+    <div class="container" id="main">
       <%= yield %>
       <%= render "layouts/footer" %>
       <%= debug(params) if Rails.env.development? %>
