--- a/app/views/cart/_product_cart.html.erb
+++ b/app/views/cart/_product_cart.html.erb
@@ -5,10 +5,18 @@
   <td class="text-left"><%= product_cart.info %></td>
   <td><%= product_cart.category.name %></td>
   <td class="text-left"><%= number_to_price(product_cart.price) %></td>
-  <td class="text-center"><%= product_cart.amount_added %></td>
+
+  <td class="text-center">
+    <%= form_tag cart_path, method: :PATCH do %>
+      <%= hidden_field_tag :product_id, product_cart.id %>
+      <%= number_field_tag :quantity, product_cart.amount_added,
+        class: "form-control" %>
+    <% end %>
+  </td>
   <td class="text-left"><%= number_to_price product_cart.get_total_price %></td>
+
   <td class="text-right">
-    <%= form_tag cart_path, method: :DELETE do |f| %>
+    <%= form_tag cart_path, method: :DELETE do %>
       <%= hidden_field_tag :product_id, product_cart.id %>
       <%= button_tag "", type: :submit, class: "btn btn-danger" do %>
         <i class="fa fa-trash"></i>
@@ -16,3 +24,4 @@
     <% end %>
   </td>
 </tr>
+
