--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -10,9 +10,11 @@
     <%= link_to edit_user_path(user), class: "btn btn-warning" do %>
       <i class="fa fa-edit"></i>
     <% end %>
-    <%= link_to user, method: :DELETE, data: {confirm: t("flash.you_sure")},
-      class: "btn btn-danger" do %>
-      <i class="fa fa-trash"></i>
+    <% unless current_user? user %>
+      <%= link_to user, method: :DELETE, data: {confirm: t("flash.you_sure")},
+        class: "btn btn-danger" do %>
+        <i class="fa fa-trash"></i>
+      <% end %>
     <% end %>
   </td>
 </tr>
