--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,11 +7,11 @@
   <td><%= user.role %></td>
 
   <td class="text-right">
-    <%= link_to edit_user_path(user), class: "btn btn-warning" do %>
+    <%= link_to edit_user_path(id: user.id), class: "btn btn-warning" do %>
       <i class="fa fa-edit"></i>
     <% end %>
     <% unless current_user? user %>
-      <%= link_to user, method: :DELETE, data: {confirm: t("flash.you_sure")},
+      <%= link_to user_path(id: user.id), method: :DELETE, data: {confirm: t("flash.you_sure")},
         class: "btn btn-danger" do %>
         <i class="fa fa-trash"></i>
       <% end %>
