--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,15 @@
 
   <body>
     <%= render "layouts/header" %>
-    <div class="container" id="main">
-      <%= yield %>
-      <%= render "layouts/footer" %>
-      <%= debug(params) if Rails.env.development? %>
+    <div class="container-fluid">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     </div>
+    <div class="container main_layout" id="main">
+      <%= yield %>
+
+<!--       <%= debug(params) if Rails.env.development? %> -->
+    </div>
+    <%= render "layouts/footer" %>
   </body>
 </html>
