--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -65,3 +65,11 @@
 #main {
   margin-top: 50px;
 }
+#error_explanation {
+  color: red;
+}
+.alert-notice {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
