auth google, facebook

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
       <div class="col-md-4 offset-md-1">
         <div class="product-grid3">
           <div class="product-image3">
-            <%= image_tag "http://www.aiszambia.com/image/avatar.png" %>
+            <%= image_tag @user.get_avatar %>
           </div>
         </div>
       </div>
@@ -36,3 +36,5 @@
   </div>
 </div>
 <hr>
+
+
