--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,3 +1,11 @@
+<%= link_to omniauth_authorize_path(:user, :facebook), class: "btn btn-block btn-social btn-facebook" do %>
+  <span class="fa fa-facebook"></span> Sign in with Facebook
+<% end %>
+<%= link_to omniauth_authorize_path(:user, :google_oauth2), class: "btn btn-block btn-social btn-google" do %>
+  <span class="fa fa-google"></span> Sign in with Google
+<% end %>
+<br/>
+
 <%- if controller_name != "sessions" %>
   <%= link_to t("link.login"), new_session_path(resource_name) %></br>
 <% end %>
@@ -16,10 +24,4 @@
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != "unlocks" %>
   <%= link_to t("devise.link.receive_unlock"), new_unlock_path(resource_name) %></br>
-<% end %>
-
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %>
-  <% end %>
 <% end %>
